# bevy-node-plumber

./: Cargo.toml  README.md
assets/shaders/: example_fill_f32_buffer.wgsl  example_fill_texture_view.wgsl
examples/: fill_buffer_with_f32.rs  modify_input_texture.rs
src/: builder.rs  graph.rs  lib.rs  node.rs  resource.rs
src/node/: compute.rs  input.rs  output.rs
